--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
