--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "bootstrap": "^5.1.0",
         "bootstrap-icons": "^1.5.0",
         "eslint-plugin-prettier": "^3.4.1",
+        "history": "^5.3.0",
         "lodash": "^4.17.15",
         "nanoid": "^3.2.0",
         "prop-types": "^15.7.2",
@@ -18,7 +19,7 @@
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
         "react-router-dom": "^5.3.0",
-        "react-scripts": "4.0.3",
+        "react-scripts": "^5.0.1",
         "react-select": "^5.1.0",
         "react-toastify": "^8.1.0",
         "web-vitals": "^1.0.1"
